--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,14 @@
 {
-    "name": "begien/paginator",
-    "type": "library",
-    "description": "simple paginator",
-    "homepage": "https://github.com/kamotetu/paginate",
-    "keywords": ["paginator", "php"],
-    "authors": [
-        {
-            "name": "kamotetu",
-            "email": "beginnerengineerblog@gmail.com"
-        }
-    ],
-    "require": {
-        "php": ">=5.3.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "4.7.*"
-    },
-    "scripts": {
-        "test": "phpunit"
-    },
     "autoload": {
         "psr-4": {
-            "Begien\\": "src/Begien/",
-            "Begien\\Tests\\": "tests/Begien/Tests/"
+            "Begien\\": "src//Begien",
+            "Tests\\": "tests"
         }
     },
-    "license": "MIT"
+    "require-dev": {
+        "phpunit/phpunit": "8.0.*"
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit --configuration tests/phpunit.xml"
+    }
 }
