--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "version": "1.0.0",
     "description": "simple paginator",
     "homepage": "https://github.com/kamotetu/paginate",
-    "keywords": ["phpmailer"],
+    "keywords": ["paginator", "pagination", "simple paginator"],
     "authors": [
         {
             "name": "kamotetu",
@@ -16,6 +16,9 @@
             "Begien\\": "src//Begien",
             "Tests\\": "tests"
         }
+    },
+    "require": {
+        "php": ">=7.2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "8.0.*"
